DB configuration updated
